src/style/style.css
/* ... */
.navbar .navbar-toggle .icon:before {
  content: "\e056";
}
.navbar .navbar-back {
  right: 15px;
  padding: 0;
  margin: 0;
  border: none;
}
.navbar .navbar-back:hover {
  background-color: rgba(0, 0, 0, 0.2);
}
.navbar .navbar-back .icon {
  margin: 0;
  padding: 4px 8px;
  color: #fff;
  position: relative;
  top: 1px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  font-size: 25px;
}
.navbar .navbar-back .icon:before {
  content: "\e079";
}
.main-nav-container {
  display: block;
  position: relative;
  left: 15px;
  right: 15px;
  bottom: 0;
  background: #040060;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border: 1px solid #040060;
  margin-bottom: 5px;
}
@media (max-width: 768px) {
  .main-nav-container {
    position: relative;
    left: auto;
    right: auto;
    bottom: auto;
    width: auto;
    background: none;
    border: none;
    margin-bottom: 0px;
    margin-top: 101px;
  }
}
.logo-container {
  position: absolute;
  width: 200px;
  margin: 15px 0 0 41px;
  z-index: 1031;
}
.logo-container-left {
  margin: 15px 0 0 0px;
}
.logo-container a {
  display: inline-block;
  width: 100%;
  height: 35px;
}
.logo-container a:before,
.logo-container a:after {
  content: " ";
  /* 1 */

  display: table;
  /* 2 */

}
.logo-container a:after {
  clear: both;
}
.logo-container a:before,
.logo-container a:after {
  content: " ";
  /* 1 */

  display: table;
  /* 2 */

}
.logo-container a:after {
  clear: both;
}
.logo-container img {
  display: block;
  max-width: 100%;
  height: 25px;
}
@media (min-width: 768px) and (max-width: 992px) {
  .logo-container {
    margin-left: 0px;
  }
  .global-nav-container {
    margin-right: -10px;
  }
}
@media (max-width: 768px) {
  .logo-container {
    position: relative
  }
}
.global-nav-container {
  position: relative;
  display: block;
  float: right;
  top: 12px;
  /*
  // on small screen move global nav under search
  @media (min-width: @screen-sm) and (max-width: @screen-md) {
    right: 15px;
    top: 50px;
  }
*/

}
@media (max-width: 768px) {
  .global-nav-container {
    top: auto;
    margin: 0px 0 20px 0;
    padding: 0;
  }
  .global-nav-container:before,
  .global-nav-container:after {
    content: " ";
    /* 1 */

    display: table;
    /* 2 */

  }
  .global-nav-container:after {
    clear: both;
  }
  .global-nav-container:before,
  .global-nav-container:after {
    content: " ";
    /* 1 */

    display: table;
    /* 2 */

  }
  .global-nav-container:after {
    clear: both;
  }
}
.global-nav-container li {
  display: block;
  margin: 0 0 0 -4px;
  padding: 0;
  list-style-type: none;
}
.global-nav-container li:first-child .global-nav-link {
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}
.global-nav-container li:last-child .global-nav-link {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}
.global-nav-container .global-nav-link {
  display: inline-block;
  padding: 6px 12px;
  margin-bottom: 0;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.428571429;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 4px;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  border-radius: 2px;
  margin-bottom: 2px;
  padding: 5px 10px;
  font-size: 12px;
  line-height: 1.5;
  border-radius: 3px;
  padding: 1px 5px;
  box-shadow: none;
}
.global-nav-container .global-nav-link:focus {
  outline: thin dotted #333;
  outline: 5px auto -webkit-focus-ring-color;
  outline-offset: -2px;
}
.global-nav-container .global-nav-link:hover,
.global-nav-container .global-nav-link:focus {
  color: #333333;
  text-decoration: none;
}
.global-nav-container .global-nav-link:active,
.global-nav-container .global-nav-link.active {
  outline: 0;
  background-image: none;
  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.global-nav-container .global-nav-link.disabled,
.global-nav-container .global-nav-link[disabled],
fieldset[disabled] .global-nav-container .global-nav-link {
  cursor: not-allowed;
  pointer-events: none;
  opacity: 0.65;
  filter: alpha(opacity=65);
  -webkit-box-shadow: none;
  box-shadow: none;
}
.global-nav-container .global-nav-cart {
  color: #ffffff;
  background-color: #040060;
  border-color: #040060;
}
.global-nav-container .global-nav-cart:hover,
.global-nav-container .global-nav-cart:focus,
.global-nav-container .global-nav-cart:active,
.global-nav-container .global-nav-cart.active,
.open .dropdown-toggle.global-nav-container .global-nav-cart {
  color: #ffffff;
  background-color: #040060;
  border-color: #040060;
}
.global-nav-container .global-nav-cart:active,
.global-nav-container .global-nav-cart.active,
.open .dropdown-toggle.global-nav-container .global-nav-cart {
  background-image: none;
}
.global-nav-container .global-nav-cart.disabled,
.global-nav-container .global-nav-cart[disabled],
fieldset[disabled] .global-nav-container .global-nav-cart,
.global-nav-container .global-nav-cart.disabled:hover,
.global-nav-container .global-nav-cart[disabled]:hover,
fieldset[disabled] .global-nav-container .global-nav-cart:hover,
.global-nav-container .global-nav-cart.disabled:focus,
.global-nav-container .global-nav-cart[disabled]:focus,
fieldset[disabled] .global-nav-container .global-nav-cart:focus,
.global-nav-container .global-nav-cart.disabled:active,
.global-nav-container .global-nav-cart[disabled]:active,
fieldset[disabled] .global-nav-container .global-nav-cart:active,
.global-nav-container .global-nav-cart.disabled.active,
.global-nav-container .global-nav-cart[disabled].active,
fieldset[disabled] .global-nav-container .global-nav-cart.active {
  background-color: #5bc0de;
  border-color: #46b8da;
}
/* ... */

